--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi proyecto social</title>
-    <link rel="stylesheet" href="Diseño.css">
+    <link rel="stylesheet" href="diseño.css">
 </head>
 <body>
     <header>
@@ -25,7 +25,7 @@
     <main class="portada">
         <section class="bienvenida">
             <h1>Mi proyecto social</h1>
-            <img src="C:\Users\usuariocc10\Desktop\PROYECTO_JS\images.jpg" alt="Imagen del proyecto" class="imagen-portada">
+            <img src="" alt="Imagen del proyecto" class="imagen-portada">
             <h2>Integrantes:</h2>
             <ul>
                 <li>Integrante 1 - Campus</li>
