--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main class="portada">
         <section class="bienvenida">
             <h1>Mi proyecto social</h1>
-            <img src="" alt="Imagen del proyecto" class="imagen-portada">
+            <img src="images.jpg" alt="Imagen del proyecto" class="imagen-portada">
             <h2>Integrantes:</h2>
             <ul>
                 <li>Integrante 1 - Campus</li>
