--- a/galería.html
+++ b/galería.html
@@ -13,22 +13,22 @@
     <main class="galeria">
         <div class="grid-container">
             <div class="grid-item">
-                <img src="C:\Users\usuariocc10\Desktop\PROYECTO_JS\imagen1.avif" alt="Imagen 1">
+                <img src="imagen1.avif" alt="Imagen 1">
             </div>
             <div class="grid-item">
-                <img src="C:\Users\usuariocc10\Desktop\PROYECTO_JS\imagen2.jpg" alt="Imagen 2">
+                <img src="imagen2.jpg" alt="Imagen 2">
             </div>
             <div class="grid-item">
-                <img src="C:\Users\usuariocc10\Desktop\PROYECTO_JS\imagen3.jpg" alt="Imagen 3">
+                <img src="imagen3.jpg" alt="Imagen 3">
             </div>
             <div class="grid-item">
-                <img src="C:\Users\usuariocc10\Desktop\PROYECTO_JS\imagen4.jpg" alt="Imagen 4">
+                <img src="imagen4.jpg" alt="Imagen 4">
             </div>
             <div class="grid-item">
-                <img src="C:\Users\usuariocc10\Desktop\PROYECTO_JS\imagen5.jpg" alt="Imagen 5">
+                <img src="imagen5.jpg" alt="Imagen 5">
             </div>
             <div class="grid-item">
-                <img src="C:\Users\usuariocc10\Desktop\PROYECTO_JS\imagen6.jpg" alt="Imagen 6">
+                <img src="imagen6.jpg" alt="Imagen 6">
             </div>
         </div>
     </main>
